# Sources for pos-installation

module_DATA = \
  modules/POSInstallation.rb

client_DATA = \
  clients/inst_slepos_server_selection.rb \
  clients/firstboot_slepos_synchronization.rb \
  clients/firstboot_slepos_installation.rb \
  clients/firstboot_slepos_selection.rb \
  clients/firstboot_slepos_initialization.rb \
  clients/inst_slepos_migration.rb \
  clients/inst_slepos_initialization.rb \
  clients/inst_slepos_detection.rb

EXTRA_DIST = $(module_DATA) $(client_DATA)

include $(top_srcdir)/Makefile.am.common